[ADD] ceppp_suite_crm: add label in french

--- a/ceppp_suite_crm/views/ceppp_suite_crm_commentaires_recruteur.xml
+++ b/ceppp_suite_crm/views/ceppp_suite_crm_commentaires_recruteur.xml
@@ -67,7 +67,7 @@
                 <filter
                     domain="[('commentaires_recruteur','!=',False)]"
                     name="commentaires_recruteur"
-                    string="Commentaires Recruteur"
+                    string="Commentaires additionnels"
                 />
             </search>
         </field>
