--- a/ceppp_suite_crm/views/ceppp_suite_crm_exp_patient_partenaire.xml
+++ b/ceppp_suite_crm/views/ceppp_suite_crm_exp_patient_partenaire.xml
@@ -30,6 +30,9 @@
                     <group>
                         <field name="nom_formation_suivie" />
                     </group>
+                    <group>
+                        <field name="role_experience" />
+                    </group>
                 </sheet>
             </form>
         </field>
@@ -48,6 +51,7 @@
                 <field name="formation_qui" type="row" />
                 <field name="formation_suivie" type="row" />
                 <field name="nom_formation_suivie" type="row" />
+                <field name="role_experience" type="row" />
             </graph>
         </field>
     </record>
@@ -65,6 +69,7 @@
                 <field name="formation_qui" />
                 <field name="formation_suivie" />
                 <field name="nom_formation_suivie" />
+                <field name="role_experience" />
                 <templates>
                     <t t-name="kanban-box">
                         <div t-attf-class="oe_kanban_global_click">
@@ -100,15 +105,19 @@
                                             <field name="formation_qui" />
                                         </strong>
                                     </li>
-                                    <li class="text-success float-right mb4" t-if="record.formation_suivie.raw_value">
-                                        <i aria-label="Ok" class="fa fa-circle" role="img" title="Ok" />
-                                    </li>
-                                    <li class="text-danger float-right mb4" t-if="!record.formation_suivie.raw_value">
-                                        <i aria-label="Invalid" class="fa fa-circle" role="img" title="Invalid" />
+                                    <li class="mb4">
+                                        <strong>
+                                            <field name="formation_suivie" />
+                                        </strong>
                                     </li>
                                     <li class="mb4">
                                         <strong>
                                             <field name="nom_formation_suivie" />
+                                        </strong>
+                                    </li>
+                                    <li class="mb4">
+                                        <strong>
+                                            <field name="role_experience" />
                                         </strong>
                                     </li>
                                 </ul>
@@ -133,6 +142,7 @@
                 <field name="formation_qui" type="row" />
                 <field name="formation_suivie" type="row" />
                 <field name="nom_formation_suivie" type="row" />
+                <field name="role_experience" type="row" />
             </pivot>
         </field>
     </record>
@@ -153,7 +163,7 @@
                 <filter domain="[('duree','!=',False)]" name="duree" string="Dur&#233;e" />
                 <filter domain="[('formation_qui','!=',False)]" name="formation_qui" string="Formation par qui" />
                 <filter
-                    domain="[('formation_suivie','=',True)]"
+                    domain="[('formation_suivie','!=',False)]"
                     name="formation_suivie"
                     string="Formation suivie sur le partenariat patient"
                 />
@@ -162,6 +172,7 @@
                     name="nom_formation_suivie"
                     string="nom formation suivie"
                 />
+                <filter domain="[('role_experience','!=',False)]" name="role_experience" string="R&#244;le" />
             </search>
         </field>
     </record>
@@ -179,6 +190,7 @@
                 <field name="formation_qui" />
                 <field name="formation_suivie" />
                 <field name="nom_formation_suivie" />
+                <field name="role_experience" />
             </tree>
         </field>
     </record>
