--- a/ceppp_suite_crm/views/ceppp_suite_crm_perspective_patient.xml
+++ b/ceppp_suite_crm/views/ceppp_suite_crm_perspective_patient.xml
@@ -31,6 +31,15 @@
                         <field name="descr_exp" />
                     </group>
                     <group>
+                        <field name="disponibilites" />
+                    </group>
+                    <group>
+                        <field name="domaine_soin" />
+                    </group>
+                    <group>
+                        <field name="domaine_soin_pa" />
+                    </group>
+                    <group>
                         <field name="duree_experience" />
                     </group>
                     <group>
@@ -76,6 +85,12 @@
                         <field name="med_1" />
                     </group>
                     <group>
+                        <field name="med_2" />
+                    </group>
+                    <group>
+                        <field name="med_3" />
+                    </group>
+                    <group>
                         <field name="membre_assoc_comite" />
                     </group>
                     <group>
@@ -88,6 +103,9 @@
                         <field name="perspective" />
                     </group>
                     <group>
+                        <field name="preferences" />
+                    </group>
+                    <group>
                         <field name="preferences_autre" />
                     </group>
                     <group>
@@ -95,6 +113,12 @@
                     </group>
                     <group>
                         <field name="professionnels_sante" />
+                    </group>
+                    <group>
+                        <field name="rel_patient" />
+                    </group>
+                    <group>
+                        <field name="role_pp" />
                     </group>
                 </sheet>
             </form>
@@ -114,6 +138,9 @@
                 <field name="conflit_interet" type="row" />
                 <field name="conflit_interet_detail" type="row" />
                 <field name="descr_exp" type="row" />
+                <field name="disponibilites" type="row" />
+                <field name="domaine_soin" type="row" />
+                <field name="domaine_soin_pa" type="row" />
                 <field name="duree_experience" type="row" />
                 <field name="etabl_prem_ligne_pa" type="row" />
                 <field name="etabl_sante_pa" type="row" />
@@ -129,13 +156,18 @@
                 <field name="formation_qui" type="row" />
                 <field name="maladie_rare_details" type="row" />
                 <field name="med_1" type="row" />
+                <field name="med_2" type="row" />
+                <field name="med_3" type="row" />
                 <field name="membre_assoc_comite" type="row" />
                 <field name="membre_assoc_comite_detail" type="row" />
                 <field name="motivations_implication" type="row" />
                 <field name="perspective" type="row" />
+                <field name="preferences" type="row" />
                 <field name="preferences_autre" type="row" />
                 <field name="preneur_decisions" type="row" />
                 <field name="professionnels_sante" type="row" />
+                <field name="rel_patient" type="row" />
+                <field name="role_pp" type="row" />
             </graph>
         </field>
     </record>
@@ -153,6 +185,9 @@
                 <field name="conflit_interet" />
                 <field name="conflit_interet_detail" />
                 <field name="descr_exp" />
+                <field name="disponibilites" />
+                <field name="domaine_soin" />
+                <field name="domaine_soin_pa" />
                 <field name="duree_experience" />
                 <field name="etabl_prem_ligne_pa" />
                 <field name="etabl_sante_pa" />
@@ -168,13 +203,18 @@
                 <field name="formation_qui" />
                 <field name="maladie_rare_details" />
                 <field name="med_1" />
+                <field name="med_2" />
+                <field name="med_3" />
                 <field name="membre_assoc_comite" />
                 <field name="membre_assoc_comite_detail" />
                 <field name="motivations_implication" />
                 <field name="perspective" />
+                <field name="preferences" />
                 <field name="preferences_autre" />
                 <field name="preneur_decisions" />
                 <field name="professionnels_sante" />
+                <field name="rel_patient" />
+                <field name="role_pp" />
                 <templates>
                     <t t-name="kanban-box">
                         <div t-attf-class="oe_kanban_global_click">
@@ -205,11 +245,10 @@
                                             <field name="adresse_perso_state" />
                                         </strong>
                                     </li>
-                                    <li class="text-success float-right mb4" t-if="record.conflit_interet.raw_value">
-                                        <i aria-label="Ok" class="fa fa-circle" role="img" title="Ok" />
-                                    </li>
-                                    <li class="text-danger float-right mb4" t-if="!record.conflit_interet.raw_value">
-                                        <i aria-label="Invalid" class="fa fa-circle" role="img" title="Invalid" />
+                                    <li class="mb4">
+                                        <strong>
+                                            <field name="conflit_interet" />
+                                        </strong>
                                     </li>
                                     <li class="mb4">
                                         <strong>
@@ -219,6 +258,21 @@
                                     <li class="mb4">
                                         <strong>
                                             <field name="descr_exp" />
+                                        </strong>
+                                    </li>
+                                    <li class="mb4">
+                                        <strong>
+                                            <field name="disponibilites" />
+                                        </strong>
+                                    </li>
+                                    <li class="mb4">
+                                        <strong>
+                                            <field name="domaine_soin" />
+                                        </strong>
+                                    </li>
+                                    <li class="mb4">
+                                        <strong>
+                                            <field name="domaine_soin_pa" />
                                         </strong>
                                     </li>
                                     <li class="mb4">
@@ -241,11 +295,10 @@
                                             <field name="exp_decision" />
                                         </strong>
                                     </li>
-                                    <li class="text-success float-right mb4" t-if="record.exp_sante.raw_value">
-                                        <i aria-label="Ok" class="fa fa-circle" role="img" title="Ok" />
-                                    </li>
-                                    <li class="text-danger float-right mb4" t-if="!record.exp_sante.raw_value">
-                                        <i aria-label="Invalid" class="fa fa-circle" role="img" title="Invalid" />
+                                    <li class="mb4">
+                                        <strong>
+                                            <field name="exp_sante" />
+                                        </strong>
                                     </li>
                                     <li class="mb4">
                                         <strong>
@@ -277,11 +330,10 @@
                                             <field name="formation_oui" />
                                         </strong>
                                     </li>
-                                    <li class="text-success float-right mb4" t-if="record.formation_pp.raw_value">
-                                        <i aria-label="Ok" class="fa fa-circle" role="img" title="Ok" />
-                                    </li>
-                                    <li class="text-danger float-right mb4" t-if="!record.formation_pp.raw_value">
-                                        <i aria-label="Invalid" class="fa fa-circle" role="img" title="Invalid" />
+                                    <li class="mb4">
+                                        <strong>
+                                            <field name="formation_pp" />
+                                        </strong>
                                     </li>
                                     <li class="mb4">
                                         <strong>
@@ -298,17 +350,20 @@
                                             <field name="med_1" />
                                         </strong>
                                     </li>
-                                    <li
-                                        class="text-success float-right mb4"
-                                        t-if="record.membre_assoc_comite.raw_value"
-                                    >
-                                        <i aria-label="Ok" class="fa fa-circle" role="img" title="Ok" />
+                                    <li class="mb4">
+                                        <strong>
+                                            <field name="med_2" />
+                                        </strong>
                                     </li>
-                                    <li
-                                        class="text-danger float-right mb4"
-                                        t-if="!record.membre_assoc_comite.raw_value"
-                                    >
-                                        <i aria-label="Invalid" class="fa fa-circle" role="img" title="Invalid" />
+                                    <li class="mb4">
+                                        <strong>
+                                            <field name="med_3" />
+                                        </strong>
+                                    </li>
+                                    <li class="mb4">
+                                        <strong>
+                                            <field name="membre_assoc_comite" />
+                                        </strong>
                                     </li>
                                     <li class="mb4">
                                         <strong>
@@ -327,6 +382,11 @@
                                     </li>
                                     <li class="mb4">
                                         <strong>
+                                            <field name="preferences" />
+                                        </strong>
+                                    </li>
+                                    <li class="mb4">
+                                        <strong>
                                             <field name="preferences_autre" />
                                         </strong>
                                     </li>
@@ -338,6 +398,16 @@
                                     <li class="mb4">
                                         <strong>
                                             <field name="professionnels_sante" />
+                                        </strong>
+                                    </li>
+                                    <li class="mb4">
+                                        <strong>
+                                            <field name="rel_patient" />
+                                        </strong>
+                                    </li>
+                                    <li class="mb4">
+                                        <strong>
+                                            <field name="role_pp" />
                                         </strong>
                                     </li>
                                 </ul>
@@ -362,6 +432,9 @@
                 <field name="conflit_interet" type="row" />
                 <field name="conflit_interet_detail" type="row" />
                 <field name="descr_exp" type="row" />
+                <field name="disponibilites" type="row" />
+                <field name="domaine_soin" type="row" />
+                <field name="domaine_soin_pa" type="row" />
                 <field name="duree_experience" type="row" />
                 <field name="etabl_prem_ligne_pa" type="row" />
                 <field name="etabl_sante_pa" type="row" />
@@ -377,13 +450,18 @@
                 <field name="formation_qui" type="row" />
                 <field name="maladie_rare_details" type="row" />
                 <field name="med_1" type="row" />
+                <field name="med_2" type="row" />
+                <field name="med_3" type="row" />
                 <field name="membre_assoc_comite" type="row" />
                 <field name="membre_assoc_comite_detail" type="row" />
                 <field name="motivations_implication" type="row" />
                 <field name="perspective" type="row" />
+                <field name="preferences" type="row" />
                 <field name="preferences_autre" type="row" />
                 <field name="preneur_decisions" type="row" />
                 <field name="professionnels_sante" type="row" />
+                <field name="rel_patient" type="row" />
+                <field name="role_pp" type="row" />
             </pivot>
         </field>
     </record>
@@ -403,7 +481,7 @@
                 />
                 <filter domain="[('adresse_perso_state','!=',False)]" name="adresse_perso_state" string="Province" />
                 <filter
-                    domain="[('conflit_interet','=',True)]"
+                    domain="[('conflit_interet','!=',False)]"
                     name="conflit_interet"
                     string="Conflits d'int&#233;r&#234;t"
                 />
@@ -416,6 +494,17 @@
                     domain="[('descr_exp','!=',False)]"
                     name="descr_exp"
                     string="Description de l'exp&#233;rience"
+                />
+                <filter domain="[('disponibilites','!=',False)]" name="disponibilites" string="Disponibilit&#233;s" />
+                <filter
+                    domain="[('domaine_soin','!=',False)]"
+                    name="domaine_soin"
+                    string="Je suis ou j'ai &#233;t&#233; suivi(e) dans les sp&#233;cialit&#233;s suivantes"
+                />
+                <filter
+                    domain="[('domaine_soin_pa','!=',False)]"
+                    name="domaine_soin_pa"
+                    string="Sp&#233;cialit&#233;s de soins"
                 />
                 <filter
                     domain="[('duree_experience','!=',False)]"
@@ -438,7 +527,7 @@
                     string="Exp&#233;rience prise de d&#233;cision relative &#224; ses soins m&#233;dicaux"
                 />
                 <filter
-                    domain="[('exp_sante','=',True)]"
+                    domain="[('exp_sante','!=',False)]"
                     name="exp_sante"
                     string="Exp&#233;rience professionnelle dans le milieu de la sant&#233;"
                 />
@@ -461,7 +550,7 @@
                 <filter domain="[('formation_date','!=',False)]" name="formation_date" string="Date de formation" />
                 <filter domain="[('formation_oui','!=',False)]" name="formation_oui" string="Si oui, laquelle" />
                 <filter
-                    domain="[('formation_pp','=',True)]"
+                    domain="[('formation_pp','!=',False)]"
                     name="formation_pp"
                     string="Formation suivie sur le partenariat patient"
                 />
@@ -472,8 +561,10 @@
                     string="Maladie rare"
                 />
                 <filter domain="[('med_1','!=',False)]" name="med_1" string="M&#233;dicaments" />
+                <filter domain="[('med_2','!=',False)]" name="med_2" string="M&#233;dicaments #2" />
+                <filter domain="[('med_3','!=',False)]" name="med_3" string="M&#233;dicaments #3" />
                 <filter
-                    domain="[('membre_assoc_comite','=',True)]"
+                    domain="[('membre_assoc_comite','!=',False)]"
                     name="membre_assoc_comite"
                     string="Membre d'une association ou comit&#233;"
                 />
@@ -488,6 +579,7 @@
                     string="Motivations &#224; s'impliquer"
                 />
                 <filter domain="[('perspective','!=',False)]" name="perspective" string="Perspective" />
+                <filter domain="[('preferences','!=',False)]" name="preferences" string="Pr&#233;f&#233;rences" />
                 <filter
                     domain="[('preferences_autre','!=',False)]"
                     name="preferences_autre"
@@ -503,6 +595,8 @@
                     name="professionnels_sante"
                     string="Professionnels de la sant&#233;"
                 />
+                <filter domain="[('rel_patient','!=',False)]" name="rel_patient" string="Relation avec le patient" />
+                <filter domain="[('role_pp','!=',False)]" name="role_pp" string="R&#244;le" />
             </search>
         </field>
     </record>
@@ -520,6 +614,9 @@
                 <field name="conflit_interet" />
                 <field name="conflit_interet_detail" />
                 <field name="descr_exp" />
+                <field name="disponibilites" />
+                <field name="domaine_soin" />
+                <field name="domaine_soin_pa" />
                 <field name="duree_experience" />
                 <field name="etabl_prem_ligne_pa" />
                 <field name="etabl_sante_pa" />
@@ -535,13 +632,18 @@
                 <field name="formation_qui" />
                 <field name="maladie_rare_details" />
                 <field name="med_1" />
+                <field name="med_2" />
+                <field name="med_3" />
                 <field name="membre_assoc_comite" />
                 <field name="membre_assoc_comite_detail" />
                 <field name="motivations_implication" />
                 <field name="perspective" />
+                <field name="preferences" />
                 <field name="preferences_autre" />
                 <field name="preneur_decisions" />
                 <field name="professionnels_sante" />
+                <field name="rel_patient" />
+                <field name="role_pp" />
             </tree>
         </field>
     </record>
